--- a/fe/src/app/auth/login/login.component.html
+++ b/fe/src/app/auth/login/login.component.html
@@ -79,7 +79,7 @@
               </a>
             </div>
             <div class="col-6 text-right">
-              <a href="javascript:void(0)" class="text-light">
+              <a [routerLink]="['/register']" class="text-light">
                 <small>Tạo tài khoản</small>
               </a>
             </div>
